--- a/handwritingdigitrecognition.ipynb
+++ b/handwritingdigitrecognition.ipynb
@@ -78,6 +78,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "819f8817",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, models\n",
+    "\n",
+    "def create_model(dropout_rate, learning_rate):\n",
+    "    input_img = tf.keras.Input(shape=(28, 28, 1))\n",
+    "    x = layers.Conv2D(32, (3, 3), activation='relu')(input_img)\n",
+    "    x = layers.MaxPooling2D((2, 2))(x)\n",
+    "    x = layers.Conv2D(64, (3, 3), activation='relu')(x)\n",
+    "    x = layers.MaxPooling2D((2, 2))(x)\n",
+    "    x = layers.Flatten()(x)\n",
+    "    x = layers.Dense(128, activation='relu')(x)\n",
+    "    x = layers.Dropout(dropout_rate)(x)\n",
+    "    output = layers.Dense(10, activation='softmax')(x)\n",
+    "    \n",
+    "    model = models.Model(input_img, output)\n",
+    "    model.compile(\n",
+    "        optimizer=tf.keras.optimizers.Adam(learning_rate=learning_rate),\n",
+    "        loss='sparse_categorical_crossentropy',\n",
+    "        metrics=['accuracy']\n",
+    "    )\n",
+    "    return model\n",
+    "\n",
+    "def ensemble_predictions(model1, model2, data):\n",
+    "    # Predict with both models and average the predictions\n",
+    "    pred1 = model1.predict(data)\n",
+    "    pred2 = model2.predict(data)\n",
+    "    ensemble_pred = (pred1 + pred2) / 2.0\n",
+    "    return ensemble_pred"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "dba3b9ee-6b9b-49b2-9382-bc3a6a780c89",
    "metadata": {},
